# Yui-patch

./: .gitignore  CHANGELOG.MD  CMakeLists.txt  README.MD  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-3-os.yml  build-lin.yml  build-mac-all-old.yml  build-mac-all.yml  build-mac-arm64.yml  build-mac-x86_64.yml  build-win.yml  release.yaml
src/: CMakeLists.txt  entry.cc  info_check.cc  init.cc  main.cc
src/config/: init.cc
src/dbghelp/: CMakeLists.txt  dbghelp.cc
src/fiddler/: CMakeLists.txt  VersionInfo.rc.in  fiddler.cc  libfiddler.rc.in
src/hook/: hook.cc
src/hostpolicy/: CMakeLists.txt  VersionInfo.rc.in  hostpolicy.cc  hostpolicy.rc.in  hostpolicy_jump.asm
src/include/: const.hh  hook.hh  info_check.hh  init.hh  nt.hh  redirect.hh
src/open/: CMakeLists.txt  Fiddler.WebUi  open.cc
test/: CMakeLists.txt  fiddler.cc
tools/: prepare-arm64e.js
tools/linux/: ci.sh
tools/mac/: ci.sh
tools/windows/: ci.ps1
